side image updated

--- a/Indexing.html
+++ b/Indexing.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
@@ -6,39 +7,12 @@
 	<meta name="keywords" content="ISAR IJMCT,ISAR IJMCT journal,ijert,ijcse,ISAR - International Journal of Mathematics and Computing Techniques,engineering journals, scientific Research journals, engineering Science  journal, engineering research journals,Engineering Application online journal, electronic journal, Engineering journal, scientific journal, Research journals, international journal of Engineering Application and Technology,Top indexed journal, High Impact, scopus indexed journal,ijca,ijcst,ijc,Best Online Journals, Computer Science Journal,Journal with Impact Factor,Best Electronic Journal,Best Management Journal,Best Engineering Journal,Best International Journal , computer science online journal, computer science electronic journal, computer journal, scientific journal, computer research journal." />
 <link rel="icon" type="image/png" href="http://www.mathsjournal.org/images/myicon.jpg" />
 	<meta name="author" content="ijcatr.com" />
-	<link rel="stylesheet" type="text/css" href="http://www.mathsjournal.org/Style.css" title="Variant Mini" media="screen,projection" />
+	<link rel="stylesheet" type="text/css" href="#" title="Variant Mini" media="screen,projection" />
 	<link rel="stylesheet" type="text/css" href="Styles/global.css" />
-	<title>ISAR IJMCT - Indexing </title>
+	<title>ISAR IJMCT - ContactUs </title>
     <style type="text/css">
     </style>
 
-  <!--<IJMCT>-->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-77439571-1', 'auto');
-      ga('send', 'pageview');
-
-  </script>
-
-  <!--<Maths Journal>-->
-
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-77439571-2', 'auto');
-    ga('send', 'pageview');
-
-  </script>
-
-
-</head>
 
 
  <script type="text/javascript">
@@ -94,6 +68,36 @@
 </script>
 
 
+
+
+  <!--<IJMCT>-->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-77439571-1', 'auto');
+      ga('send', 'pageview');
+
+  </script>
+
+  <!--<Maths Journal>-->
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-77439571-2', 'auto');
+    ga('send', 'pageview');
+
+  </script>
+
+
+</head>
+
 <body>
 
 
@@ -106,6 +110,7 @@
 <link rel="stylesheet" type="text/css" href="http://www.mathsjournal.org/Style.css" title="Variant Mini" media="screen,projection" />
 </head>
 <body>
+
 	 	  	<div id="logo">
 			<img src="http://www.mathsjournal.org/images/title1.jpg" alt="IJMCT - ISAR Journals" width="977" height="220" />
 
@@ -114,140 +119,98 @@
 
 </body>
 </html></div>
+<center><font size="3" font color="#045FB4">submit your article : IJMCTchief@gmail.com</font></center><br>
 
 <div id="inside">
 <div id="content">
 
-  <div id="sidebarmulticenter">
-<div class="right">
-				<br/>
-				<div class="sidebarmulticenter" align="center">
+ <div id="sidebarmulticenter">
+ <div class="right">
 
-          <h4><center>ISAR IJMCT News</center> </h4>
-				<marquee scrollamount="2" direction="up" onmouseover="this.stop()"  onmouseout="this.start()" loop="true" width="100%">
-
-          <center> <font color="#000040">
-					<strong>ISAR IJMCT provides e-certificate of publication to authors.</strong></font>
-					</center><br/><br/>
-
-					<center> <font color="#000040">
-					<strong><a href="http://www.mathsjournal.org/callforpaper.html">Call For Paper</a> for Cureent Issues.</strong></font>
-					</center><br/><br/>
-
-					<center> <font color="#000040">
-					<strong> Inviting for Join As Reviewers.</strong></font>
-					</center><br/><br/>
-
-					<center> <font color="#000040">
-					<strong> You can submit research article to <a href="mailto:IJMCTchief@gmail.com" >IJMCTchief@gmail.com</a></strong>				                    </font>
-					</center><br/><br/>
+			</div>
 
 
-
-					<center> <font color="#000040">
-					<strong><p>&nbsp;</p></strong></font>
-					</center><br/>
-
-				</marquee>
-				</div>
-
-							<br/>
-
-								<div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
-			   <center><a href="http://www.mathsjournal.org/callforpaper.html"><img src="http://www.mathsjournal.org/images/paper.gif" width="75%" hieght="50%" /></a></center>
-
-			  </div>
-
-  <div class="divround2"   style="border: 20x solid #0033CC;" >
- <center><a href="http://www.mathsjournal.org/Joinus.html"><img src="http://www.mathsjournal.org/images/Guest.gif" width="75%" hieght="50%" /></a></center>
-
-			  </div>
-	<br/>
-
-			<div class="sidebarmulti" >
-              <h4><center> List of Journls</center> </h4>
-
-				<center><br> <font color="#000040" size="3">
-					<strong><a href="http://www.ijcsejournal.org">ISAR - IJCSE</a></strong></font>
-					</center><br/>
-
-					<center> <font color="#000040" size="3">
-					<strong><a href="http://www.mathsjournal.org">ISAR - ISAR IJMCT</a></strong></font>
-					</center><br/>
-					<center> <font color="#000040" size="3">
-					<strong><a href="http://www.internationaljournalisar.org/IJMCT/index.html">ISAR - IJMCT</a></strong></font>
-					</center><br/>
-                                         <center> <font color="#000040" size="3">
-					<strong><a href="http://www.internationaljournalisar.org/IJPT/index.html">ISAR - IJPT</a></strong></font>
-					</center><br/>
-
-
-
-
-
-					<center> <font color="#000040">
-					<strong><p>&nbsp;</p></strong></font>
-					</center><br/>
-
-
-				</div>
-		</div>
-
-
-<font size="3" font color="#045FB4"><center>submit your article : IJMCTchief@gmail.com</center></font><br>
-
-
-
-<font color="#FF4000" font size="4"><center><u>ISAR - International Journal of Mathematics and Computing Techniques</u></center></font></font><br><br>
 
 
 <center><a href="http://www.internationaljournalisar.org/callforpaper.html"><font face="arial" font color="#08088A" font size="4"><strong><u><span class="monthDemo"></span><img src="http://www.mathsjournal.org/images/new.gif" align="#" style="margin:0px"></u></strong></font></a></center><br><br>
 
 
+
 <p><ul>
 
-<font size="3" font color="#045FB4"><center>UPDATE SOON...</center></font><br>
 
 
-
-<!--<table border="05" align="left" cellpadding="10" cellspacing="05">
+<table border="05" align="left" cellpadding="10" cellspacing="05">
         <tr>
-              <td width="400" height="250" align="left" valign="top">
+              <td width="600" height="250" align="left" valign="top">
 
 
     <table width="450" height="100" border="0" cellpadding="0" cellspacing="5">
 
       <tr>
-        <td height="104" align="center"><img src="http://www.ijcsejournal.org/images/google-scholar.jpg" alt="google scolar beta" width="200" height="80" /></td>
-        <td align="center"><img src="http://www.ijcsejournal.org/images/journalseeker.png" alt="index-copernicus" width="200" height="80" /></td>
+        <td height="104" align="center"><img src="http://www.ijcsejournal.org/images/google-scholar.jpg" alt="google scolar beta" width="250" height="80" /></td>
+        <td align="center"><img src="http://www.ijcsejournal.org/images/journalseeker.png" alt="index-copernicus" width="250" height="80" /></td>
       </tr>
       <tr>
-        <td height="104" align="center"><img src="http://www.ijcsejournal.org/images/oaji.gif" width="200" height="80" alt="doaj" /></a></td>
-        <td align="center"><a href="http://www.asciencedirectory.com/"><img src="http://www.ijcsejournal.org/images/slide.png" width="200" height="80" alt="computer" /></td>
+        <td height="104" align="center"><img src="http://www.ijcsejournal.org/images/oaji.gif" width="250" height="80" alt="doaj" /></a></td>
+        <td align="center"><a href="#"><img src="http://www.ijcsejournal.org/images/slide.png" width="250" height="80" alt="computer" /></td>
       </tr>
       <tr>
-        <td height="104" align="center"><img src="http://www.ijcsejournal.org/images//Academia_Edu.jpg" width="200" height="80" alt="cabell's directories" /></td>
-        <td align="center"><img src="http://www.ijcsejournal.org/images/InternetArchive.jpg" width="200" height="80" alt="ulrich web" /></td>
+        <td height="104" align="center"><img src="http://www.ijcsejournal.org/images//Academia_Edu.jpg" width="250" height="80" alt="cabell's directories" /></td>
+        <td align="center"><img src="http://www.ijcsejournal.org/images/InternetArchive.jpg" width="250" height="80" alt="ulrich web" /></td>
       </tr>
       <tr>
-        <td height="104" align="center"><img src="http://www.ijcsejournal.org/images/documentsmx.png" alt="" width="200" height="100" /></a></td>
-        <td align="center" class="comp_sci"><img src="http://www.ijcsejournal.org/images/figshare.jpg" width="200" height="80" alt="open j gate" /></td>
+        <td height="104" align="center"><img src="http://www.ijcsejournal.org/images/documentsmx.png" alt="" width="250" height="100" /></a></td>
+        <td align="center" class="comp_sci"><img src="http://www.ijcsejournal.org/images/figshare.jpg" width="250" height="80" alt="open j gate" /></td>
+      </tr>
+ <tr>
+        <td height="104" align="center"><img src="http://www.internationaljournalisar.org/images/mendaly.png" alt="" width="250" height="100" /></a></td>
+        <td align="center" class="comp_sci"><img src="http://www.internationaljournalisar.org/images/thomson.png" width="250" height="80" alt="open j gate" /></td>
+      </tr>
+ <tr>
+        <td height="104" align="center"><img src="http://www.ijetjournal.org/images/citefactor.png" alt="" width="250" height="100" /></a></td>
+
+        <td align="center" class="comp_sci"><img src="http://www.ijetjournal.org/images/electronic-library.png" width="250" height="80" alt="open j gate" /></td>
+      </tr>
+ <tr>
+        <td height="104" align="center"><img src="http://www.ijctjournal.org/images/quicken_v2_docstoc_logo.png" alt="" width="250" height="100" /></a></td>
+        <td align="center" class="comp_sci"><img src="http://www.ijetjournal.org/images/Arxiv_ijet.png" width="250" height="80" alt="open j gate" /></td>
       </tr>
 
 
 
-    </table></table>-->
+    </table></table>
 
 
 
 
       </ul>  </p>
 
+<br>
+
+
+
+
+
+
+		<div style="float:center"><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+<title>Untitled Document</title>
+</head>
+
+<body>
+
+
+		<br/>
+</body>
+</html>
+</div>
 				 <p style="font-size:14px; font-family:'Times New Roman', Times, serif;color:#000000">&nbsp;</p>
 
 		</div><br />&nbsp;</div>
 		</div>
-
 
 
 <body>
@@ -259,26 +222,26 @@
               <h2><center>ISAR IJMCT - Online</center> </h2>
 								<ul class="sidemenumulti">
 
-	<li><div><img src="" align="left" style="margin:10px" /><a href="index.html"> Home</a></div></li>
-	<li><div><a href="Archives.html"alt="IJMCT - ISAR Journals">Archives</a></div></li>
-	<li><div><a href="Topics.html" alt="IJMCT - ISAR Journals">Topics</a></div></li>
-	<li><div><a href="CurrentIssues.html" alt="IJMCT - ISAR Journals">Current Issue</a></div></li>
-	<li><div><a href="callforpaper.html">Call For Paper<img src="http://www.mathsjournal.org/images/new.gif" align="#" style="margin:0px"></a></div></li>
-	<li><div><a href="Publication-Fee.html" alt="IJMCT - ISAR Journals">Publication Fee </a>
-	<li><div><a href="aimscope.html" alt="IJMCT - ISAR Journals">Aim and Scope</a></div></li>
-	<li><div><a href="publish_paper.html" alt="IJMCT - ISAR Journals">Submission</a></div></li>
-	<li><div><a href="instructions.html">Author Instructions </a></div></li>
-	<li><div><a href="indexing.html" alt="IJMCT - ISAR Journals">Indexing</a></div></li>
-	<li><div><a href="Peer-review.html" alt="IJMCT - ISAR Journals">Peer Review</a></div></li>
-	<li><div><a href="Board-Member.html" alt="IJMCT - ISAR Journals">Board Member</a></div></li>
-	<li><div><a href="copyright-infringement.html" alt="IJMCT - ISAR Journals">Copyright-Infringement</a></div></li>
-	<li><div><a href="Joinus.html" alt="IJMCT - ISAR Journals">Join us as Reviewer</a></div>
-	<li><div><a href="faq.html" alt="IJMCT - ISAR Journals">FAQ</a></div></li>
-	<li><div><a href="ContactUs.html" alt="IJMCT - ISAR Journals">Contact us</a></div></li>
+		<li><div><img src="" align="left" style="margin:10px" /><a href="index.html"> Home</a></div></li>
+		<li><div><a href="Archives.html"alt="IJMCT - ISAR Journals">Archives</a></div></li>
+		<li><div><a href="Topics.html" alt="IJMCT - ISAR Journals">Topics</a></div></li>
+		<li><div><a href="CurrentIssues.html" alt="IJMCT - ISAR Journals">Current Issue</a></div></li>
+		<li><div><a href="callforpaper.html">Call For Paper<img src="http://www.mathsjournal.org/images/new.gif" align="#" style="margin:0px"></a></div></li>
+		<li><div><a href="Publication-Fee.html" alt="IJMCT - ISAR Journals">Publication Fee </a>
+		<li><div><a href="aimscope.html" alt="IJMCT - ISAR Journals">Aim and Scope</a></div></li>
+		<li><div><a href="publish_paper.html" alt="IJMCT - ISAR Journals">Submission</a></div></li>
+		<li><div><a href="instructions.html">Author Instructions </a></div></li>
+		<li><div><a href="indexing.html" alt="IJMCT - ISAR Journals">Indexing</a></div></li>
+		<li><div><a href="Peer-review.html" alt="IJMCT - ISAR Journals">Peer Review</a></div></li>
+		<li><div><a href="Board-Member.html" alt="IJMCT - ISAR Journals">Board Member</a></div></li>
+		<li><div><a href="copyright-infringement.html" alt="IJMCT - ISAR Journals">Copyright-Infringement</a></div></li>
+		<li><div><a href="Joinus.html" alt="IJMCT - ISAR Journals">Join us as Reviewer</a></div>
+		<li><div><a href="faq.html" alt="IJMCT - ISAR Journals">FAQ</a></div></li>
+		<li><div><a href="ContactUs.html" alt="IJMCT - ISAR Journals">Contact us</a></div></li>
 			  </ul></ul>
 	  </div>
 
-        <div class="sidebarboxmulti" align="">
+        <div class="sidebarboxmulti" >
               <h2><center>DOWNLOADS</center></h2>
 			  <div>
 			 <ul class="sidemenumulti">
@@ -288,10 +251,9 @@
 			  </div>
 			</div>
 
-			<div class="sidebarboxmulti" align="center">
-			              <h2>Update news</h2><br>
+<div class="sidebarboxmulti" align="center">
+              <h2>Update news</h2><br>
 	<font face="" font size="2"font color="brown"><strong>Notification  :</font><font face="" font size="2"font color="blue"> <span class="monthDemo"></span></strong></font><br><br><font face="" font size="2"font color="brown"><strong>Frequency :</font><font face="" font size="2"font color="blue"> 6 issues per year</font></strong><br><br><font face="" font size="2"font color="brown"><strong>Subject :</font><font face="" font size="2"font color="blue">Mathematics and Computing Techniques</strong></font><br><br></div>
-
 
 <div class="sidebarboxmulti" align="">
               <h2><center>Our Journals</center></h2>
@@ -304,19 +266,13 @@
         <li><div><a href="http://www.internationaljournalisar.org" target="blank" alt="ISAR Journals"><font size="2" font color="blue"><strong>More Journals</strong></font></a></div></li>
 		</ul></div></div>
 
-
 <!--<div class="sidebarboxmulti" align="center">
               <h2>Official FB Page</h2><br>
 	<div class="content"><iframe src="//www.facebook.com/plugins/likebox.php?href=https://www.facebook.com/ISAR-Journals-737205039741272&amp;width=200&amp;height=400&amp;colorscheme=light&amp;show_faces=true&amp;header=false&amp;stream=false&amp;show_border=false" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:175px; height:230px;" allowTransparency="true"></iframe>
 </div></div>-->
 
-			<div class="sidebarboxmulti" align="center">
-              <h2> Visiter Counter</h2>
-<!-- BEGIN: Powered by Supercounters.com -->
-		<center><script type="text/javascript" src="http://widget.supercounters.com/flag.js"></script><script type="text/javascript">sc_flag(1421319,"FFFFFF","000000","0d0c0d",2,10,0,0)</script><br><noscript><a href="http://www.supercounters.com/">Flag Counter</a></noscript>
-		</center>
-		<!-- END: Powered by Supercounters.com -->
-			</div>
+
+
 
 
 </div>
@@ -328,7 +284,6 @@
 </body>
 </html>
   </div>
-
 
 <body>
 
