--- a/copyright-infringement.html
+++ b/copyright-infringement.html
@@ -123,97 +123,43 @@
 <div id="inside">
 <div id="content">
 
-  <div id="sidebarmulticenter">
+ <div id="sidebarmulticenter">
+ <div class="right">
+ 				<br/>
+ 				 <h4><center>Recent Updates ...</center> </h4>
+
+ <div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
+   <center><a href="http://www.mathsjournal.org/submit.html" title="Submit Papers"><img src="http://www.internationaljournalisar.org/images/SubmitArticles.jpg" alt="IJRET" width="180" height="100" /></a></center></div>
 
 
+ <div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
+   <center><a href="https://scholar.google.co.in/scholar?start=10&q=ijretjournal.org&hl=en&as_sdt=0,5" title="google scholar" target="blank"><img src="http://www.internationaljournalisar.org/images/google-scholar.png" alt="IJRET" width="170" height="80" /></a></center></div>
 
-<div class="right">
-				<br/>
-				<div class="sidebarmulticenter" align="center">
+ <div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
+   <center><a href="https://www.mendeley.com/profiles/isar---international-scientif/?viewAsOther=true" title="mendaly" target="blank"><img src="http://www.internationaljournalisar.org/images/mendaly.png" alt="IJRET" width="150" height="60" /></a></center></div>
 
-          <h4><center>ISAR IJMCT News</center> </h4>
-				<marquee scrollamount="2" direction="up" onmouseover="this.stop()"  onmouseout="this.start()" loop="true" width="100%">
+ <div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
+   <center><a href="http://www.internationaljournalisar.org" title="Journals" target="blank"><img src="http://www.internationaljournalisar.org/images/jounals.png" alt="IJRET" width="180" height="110" /></a></center></div>
 
-          <center> <font color="#000040">
-					<strong>ISAR IJMCT provides e-certificate of publication to authors.</strong></font>
-					</center><br/><br/>
+ <div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
+   <center><a href="http://www.researcherid.com/rid/M-2299-2016" title="thomson" target="blank"><img src="http://www.internationaljournalisar.org/images/thomson.png" alt="IJRET" width="170" height="80" /></a></center></div>
 
-					<center> <font color="#000040">
-					<strong><a href="http://www.mathsjournal.org/callforpaper.html">Call For Paper</a> for Cureent Issues.</strong></font>
-					</center><br/><br/>
-
-					<center> <font color="#000040">
-					<strong> Inviting for Join As Reviewers.</strong></font>
-					</center><br/><br/>
-
-					<center> <font color="#000040">
-					<strong> You can submit research article to <a href="mailto:IJMCTchief@gmail.com" >IJMCTchief@gmail.com</a></strong>				                    </font>
-					</center><br/><br/>
+ <div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
+   <center><a href="http://journalseeker.researchbib.com/view/issn/2455-7994" title="researchbib" target="blank"> <img src="http://www.internationaljournalisar.org/images/journalseeker.png" alt="IJRET" width="170" height="65" /></a></center></div>
 
 
-
-					<center> <font color="#000040">
-					<strong><p>&nbsp;</p></strong></font>
-					</center><br/>
-
-				</marquee>
-				</div>
-
-							<br/>
-
-								<div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
-			   <center><a href="http://www.mathsjournal.org/callforpaper.html"><img src="http://www.mathsjournal.org/images/paper.gif" width="75%" hieght="50%" /></a></center>
-
-			  </div>
-
-  <div class="divround2"   style="border: 20x solid #0033CC;" >
- <center><a href="http://www.mathsjournal.org/Joinus.html"><img src="http://www.mathsjournal.org/images/Guest.gif" width="75%" hieght="50%" /></a></center>
-
-			  </div>
-	<br/>
-
-<div class="sidebarmulti" >
-              <h4><center>Speak to Us ..</center> </h4>
-<p><center><font face="" font size="3"font color="brown"><strong>+91 :</font><font face="" font size="3"font color="blue"> 994046 4920</strong></font><br><br><font face="" font size="2"font color="brown"><strong>Weekdays :</font><font face="" font size="2"font color="blue"> 10AM - 10PM IST</font></strong><br><br><font face="" font size="2"font color="brown"><strong>Sunday:</font><font face="" font size="2"font color="blue"> 11AM - 9PM IST</strong></font></center></p><br><br>
-</div>
-			<!--<div class="sidebarmulti" >
-              <h4><center>Indexing</center> </h4>
-
-				<center><tr>
-				<td>
-				<img src="http://www.mathsjournal.org/images/google-scholar.jpg" width="170" height="60" alt="Google scholar" longdesc=					                         "http://scholar.google.co.in/" />				</td>
-				</tr>
-
-				<tr>
-				<td>
-				<img src="http://www.mathsjournal.org/images/journalseeker.png" width="170" height="60" alt="Microsoft Academic search" longdesc=					                         "" />				</td>
-				</tr>
+ <div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
+   <center><a href="https://independent.academia.edu" title="academia" target="blank"><img src="http://www.internationaljournalisar.org/images/academia.jpg" alt="IJRET" width="170" height="105" /></a></center></div>
 
 
-				<tr>
-				<td>
-				<img src="http://www.mathsjournal.org/images/oaji.gif" width="170" height="50" alt="Index copernicus" longdesc="" />
-				</td>
-				</tr>
+ <div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
+   <center><a href="https://www.slideshare.net" title="slideshare" target="blank"><img src="http://www.internationaljournalisar.org/images/slideshare.jpg" alt="IJRET" width="170" height="85" /></a></center></div>
 
-				<tr>
-				<td>
-				<img src="http://www.mathsjournal.org/images/slide.png" width="170" height="50" alt="Microsoft Academic search" longdesc=					                         "" />				</td>
-				</tr>
+ <div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
+   <center><a href="http://www.mathsjournal.org/Joinus.html" title="callReviewers" target="blank"><img src="http://www.internationaljournalisar.org/images/callReviewers.jpg" alt="IJRET" width="170" height="95" /></a></center></div>
 
-				<tr>
-				<td>
-				<img src="http://www.mathsjournal.org/images//Academia_Edu.jpg" width="170" height="70" alt="Microsoft Academic search" longdesc=					                         "" />				</td>
-				</tr>
-
-				<tr>
-				<td>
-				<p align="center" style="font-size:12px; color:#000099"><a href="http://www.mathsjournal.org/indexing.html">and many more... </a></p>
-				</td>
-          </tr></center>
-
-				</div>-->
-		</div>
+<img src="http://www.mathsjournal.org/images/ISAR IJMCT_code.png" width="170" height="120" alt="QR-code" />
+			</div>
 
 
 
