--- a/index.html
+++ b/index.html
@@ -284,85 +284,42 @@
   <div id="sidebarmulticenter">
 <div class="right">
 				<br/>
-				<div class="sidebarmulticenter" align="center">
-
-          <h4><center>ISAR IJMCT News</center> </h4>
-				<marquee scrollamount="2" direction="up" onmouseover="this.stop()"  onmouseout="this.start()" loop="true" width="100%">
-
-          <center> <font color="#000040">
-					<strong>ISAR IJMCT provides e-certificate of publication to authors.</strong></font>
-					</center><br/><br/>
-
-					<center> <font color="#000040">
-					<strong><a href="http://www.mathsjournal.org/callforpaper.html">Call For Paper</a> for Cureent Issues.</strong></font>
-					</center><br/><br/>
-
-					<center> <font color="#000040">
-					<strong> Inviting for Join As Reviewers.</strong></font>
-					</center><br/><br/>
-
-					<center> <font color="#000040">
-					<strong> You can submit research article to <a href="mailto:IJMCTchief@gmail.com" >IJMCTchief@gmail.com</a></strong>				                    </font>
-					</center><br/><br/>
-
-
-
-					<center> <font color="#000040">
-					<strong><p>&nbsp;</p></strong></font>
-					</center><br/>
-
-				</marquee>
-				</div>
-
-							<br/>
+				 <h4><center>Recent Updates ...</center> </h4>
 
 <div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
-			   <!--<center><img src="http://www.mathsjournal.org/images/issn.jpg" width="80%" hieght="40%" /></center>
-<center><b><font size="3" color="red">ISSN:</font><font size="3" color="blue"> 2455&#x2D 1341 </font></center></b>-->
-
-			  </div>
-		<div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
-<center><a href="http://www.mathsjournal.org/callforpaper.html"><img src="http://www.mathsjournal.org/images/paper.gif" width="75%" hieght="50%" /></a></center></div>
-
-  <div class="divround2"   style="border: 20x solid #0033CC;" >
- <center><a href="http://www.mathsjournal.org/Joinus.html"><img src="http://www.mathsjournal.org/images/Guest.gif" width="75%" hieght="50%" /></a></center> </div><br/>
+  <center><a href="http://www.mathsjournal.org/submit.html" title="Submit Papers"><img src="http://www.internationaljournalisar.org/images/SubmitArticles.jpg" alt="IJRET" width="180" height="100" /></a></center></div>
 
 
-<div class="sidebarmulti" >
-              <h4><center>Speak to Us ..</center> </h4>
-<p><center><font face="" font size="3"font color="brown"><strong>+91 :</font><font face="" font size="3"font color="blue"> 994046 4920</strong></font><br><br><font face="" font size="2"font color="brown"><strong>Weekdays :</font><font face="" font size="2"font color="blue"> 10AM - 10PM IST</font></strong><br><br><font face="" font size="2"font color="brown"><strong>Sunday:</font><font face="" font size="2"font color="blue"> 11AM - 9PM IST</strong></font></center></p><br><br>
-</div>
+<div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
+  <center><a href="https://scholar.google.co.in/scholar?start=10&q=ijretjournal.org&hl=en&as_sdt=0,5" title="google scholar" target="blank"><img src="http://www.internationaljournalisar.org/images/google-scholar.png" alt="IJRET" width="170" height="80" /></a></center></div>
 
-			<!--<div class="sidebarmulti" >
-              <h4><center>Indexing</center> </h4>
+<div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
+  <center><a href="https://www.mendeley.com/profiles/isar---international-scientif/?viewAsOther=true" title="mendaly" target="blank"><img src="http://www.internationaljournalisar.org/images/mendaly.png" alt="IJRET" width="150" height="60" /></a></center></div>
 
-				<center><tr>
-				<td>
-<img src="http://www.mathsjournal.org/images/google-scholar.jpg" width="170" height="60" alt="Google scholar" longdesc="http://scholar.google.co.in/" /></td></tr>
-<tr><td><a href="http://journalseeker.researchbib.com/view/issn/2455-1341"  target="blank"><img src="http://www.mathsjournal.org/images/journalseeker.png" width="170" height="60" alt="Microsoft Academic search" longdesc="" />	</a></td></tr>
+<div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
+  <center><a href="http://www.internationaljournalisar.org" title="Journals" target="blank"><img src="http://www.internationaljournalisar.org/images/jounals.png" alt="IJRET" width="180" height="110" /></a></center></div>
 
-<tr><td><a href="#"><img src="http://www.mathsjournal.org/images/oaji.gif" width="170" height="50" alt="Index copernicus" longdesc="" /></td></tr>
+<div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
+  <center><a href="http://www.researcherid.com/rid/M-2299-2016" title="thomson" target="blank"><img src="http://www.internationaljournalisar.org/images/thomson.png" alt="IJRET" width="170" height="80" /></a></center></div>
 
-<tr><td><a href="http://www.slideshare.net/ISAR-ISAR IJMCT" target="blank"><img src="http://www.mathsjournal.org/images/slide.png" width="170" height="50" alt="Microsoft Academic search" longdesc="" /></a></td></tr>
-
-<tr><td><a href="https://independent.academia.edu/ISARISAR IJMCT" target="blank"><img src="http://www.mathsjournal.org/images/Academia_Edu.jpg" width="170" height="70" alt="Microsoft Academic search" longdesc="" /></a></td></tr>
-
-<tr><td><a href="https://archive.org/details/@isar-ijret" target="blank"><img src="http://www.mathsjournal.org/images/InternetArchive.jpg" width="170" height="70" alt="Microsoft Academic search" longdesc="" /></a></td></tr>
-
-<tr><td><a href="http://documents.mx" target="blank"><img src="http://www.mathsjournal.org/images/documentsmx.png" width="170" height="70" alt="Microsoft Academic search" longdesc="" /></a></td></tr>
-
-<tr><td><a href="https://figshare.com" ><img src="http://www.mathsjournal.org/images/figshare.jpg" width="170" height="70" alt="Microsoft Academic search" longdesc="" /></a></td></tr>
-
-<tr><td><p align="center" style="font-size:12px; color:#000099"><a href="http://www.mathsjournal.org/indexing.html">and many more... </a></p></td></tr></center>
+<div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
+  <center><a href="http://journalseeker.researchbib.com/view/issn/2455-7994" title="researchbib" target="blank"> <img src="http://www.internationaljournalisar.org/images/journalseeker.png" alt="IJRET" width="170" height="65" /></a></center></div>
 
 
-</div>-->
+<div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
+  <center><a href="https://independent.academia.edu" title="academia" target="blank"><img src="http://www.internationaljournalisar.org/images/academia.jpg" alt="IJRET" width="170" height="105" /></a></center></div>
 
-<div class="sidebarmulti" >
-              <h4> QR - Code</h4>
-		<img src="http://www.mathsjournal.org/images/ISAR IJMCT_code.png" width="170" height="120" alt="QR-code" />
 
-			</div></div>
+<div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
+  <center><a href="https://www.slideshare.net" title="slideshare" target="blank"><img src="http://www.internationaljournalisar.org/images/slideshare.jpg" alt="IJRET" width="170" height="85" /></a></center></div>
+
+<div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
+  <center><a href="http://www.mathsjournal.org/Joinus.html" title="callReviewers" target="blank"><img src="http://www.internationaljournalisar.org/images/callReviewers.jpg" alt="IJRET" width="170" height="95" /></a></center></div>
+
+<!--<img src="http://www.mathsjournal.org/images/ISAR IJMCT_code.png" width="170" height="120" alt="QR-code" />-->
+			</div>
+
+
 
 <font size="3" font color="#045FB4"><center>submit your article : IJMCTchief@gmail.com</center></font><br>
 <center><a href="http://www.mathsjournal.org/callforpaper.html"><font face="arial" font color="#08088A" font size="4"><strong><u> <span class="monthDemo"><img src="http://www.mathsjournal.org/images/new.gif" align="#" style="margin:0px"></u></strong></font></a></center><br>
@@ -373,23 +330,9 @@
 
 
 
-                    <p align="justify" style="font-size:14px; font-family:'Times New Roman', Times, serif;color:#000000">ISAR IJMCT (International Journal of Computer science engineering Techniques, An International Open Access Journal) explores advances in research pertaining to applied, theoretical and experimental Technological studies. The goal of ISAR IJMCT is to promote scientific information interchange between researchers, developers, students, and practitioners working in and around the world.</p>
+                    <p align="justify" style="font-size:14px; font-family:'Times New Roman', Times, serif;color:#000000">ISAR IJMCT (International Journal of Computer science engineering Techniques, An International Open Access Journal) explores advances in research pertaining to applied, theoretical and experimental Technological studies. The goal of ISAR IJMCT is to promote scientific information interchange between researchers, developers, students, and practitioners working in and around the world.</p><br>
 
-<center><strong><u><a href="http://www.researcherid.com/rid/M-2299-2016" target="_blank"><font face="arial" font size="3" color="red" >Thomson Reuters ResearcherID:<font face="arial" font size="3" color="00000" > M-2299-2016</a></u></strong></font></font><img src="http://www.mathsjournal.org/images/new.gif" align="#" style="margin:0px">
-
-<center><table width="250" height="10" border="0" cellpadding="0" cellspacing="0">
-
- <td><tr><a href="http://www.researcherid.com/rid/M-2299-2016"  target="_blank"><img style="border:groove; border-color:#000;" img src="http://www.mathsjournal.org/images/researcherid thomson reuters.png" width="160" height="70" alt="thomson reuters" /></a></tr></td></center>
-
-<!--<td><tr><a href="#" title="Google" target="_blank"> <img style="border:groove; border-color:#000;" img src="http://www.ijetjournal.org/images/google-scholar.png" alt="google scolar beta" width="160" height="70" /></a></tr></td>
-
-<td><tr><a href="#" title="IJCT-seek" target="_blank">
-<img style="border:groove; border-color:#000;" img src="http://www.ijctjournal.org/images/journalseeker.png" title="IJCT Journal Seeker" width="150" height="70" /></a></tr></td>-->
-
- </table>
-
- <p>
-     <table class="MsoTableGrid" style="max-width: 95%; border-collapse: collapse; border-spacing: 0px; padding: 0px; margin: 10px 0px; color: #000000; font-family: Arial, Helvetica, sans-serif; font-size: 12px; line-height: 18px; border: none; background-color: #e5e5e5;" border="1" cellspacing="0" cellpadding="0">
+ <p><table class="MsoTableGrid" style="max-width: 95%; border-collapse: collapse; border-spacing: 0px; padding: 0px; margin: 10px 0px; color: #000000; font-family: Arial, Helvetica, sans-serif; font-size: 12px; line-height: 18px; border: none; background-color: #e5e5e5;" border="1" cellspacing="0" cellpadding="0">
 <tbody>
 <tr>
 <td style="width: 1250.6pt; border: 1pt solid black; padding: 0in 5.4pt;" valign="top" width="213">
@@ -421,7 +364,7 @@
 <table width="10%">
 
  <p>
-     <table class="MsoTableGrid" style="max-width: 70%; border-collapse: collapse; border-spacing: 0px; padding: 0px; margin: 10px 0px; color: #000000; font-family: Arial, Helvetica, sans-serif; font-size: 12px; line-height: 18px; border: none; background-color: #fffff" border="1" cellspacing="0" cellpadding="0">
+     <table class="MsoTableGrid" style="max-width: 100%; border-collapse: collapse; border-spacing: 0px; padding: 0px; margin: 10px 0px; color: #000000; font-family: Arial, Helvetica, sans-serif; font-size: 12px; line-height: 18px; border: none; background-color: #fffff" border="1" cellspacing="0" cellpadding="0">
 
 <tbody>
 <tr><center><span style="font-family: cambria; font-size: 13pt;"><font color="#FF4000">Volume 2 Issue 3 , <span class="monthDemo"> January - February 2017<img src="http://www.mathsjournal.org/images/new.gif" align="#" style="margin:0px"></font></span></center>
@@ -581,24 +524,6 @@
 <div class="sidebarboxmulti" align="center">
               <h2>Update news</h2><br>
 	<font face="" font size="2"font color="brown"><strong>Notification  :</font><font face="" font size="2"font color="blue"> <span class="monthDemo"></span></strong></font><br><br><font face="" font size="2"font color="brown"><strong>Frequency :</font><font face="" font size="2"font color="blue"> 6 issues per year</font></strong><br><br><font face="" font size="2"font color="brown"><strong>Subject :</font><font face="" font size="2"font color="blue"> Mathematics and Computing Techniques</strong></font><br><br></div>
-
-
-<div class="sidebarboxmulti" align="">
-              <h2><center>Our Journals</center></h2>
-		<div>
-		<ul class="sidemenumulti">
-		<li><div><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:07px"><a href="http://www.mathsjournal.org" target="blank" alt="IJMCT- ISAR Journals"><font size="2"><strong>ISAR IJMCT </strong></font></a></div></li>
-		<li><div><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:07px"><a href="http://www.ijcsejournal.org" target="blank"><font size="2"><strong>ISAR IJCSE </strong></font></a></div></li>
-        <li><div><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:07px"><a href="http://www.ijretjournal.org" target="blank"><font size="2"><strong>ISAR IJRET </strong></font></a></div></li>
-        <li><div><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:07px"><a href="http://www.ijp2p.org" target="blank"><font size="2"><strong>ISAR IJPT</strong></font></a></div></li>
-        <li><div><a href="http://www.internationaljournalisar.org" target="blank" alt="ISAR Journals"><font size="2" font color="blue"><strong>More Journals</strong></font></a></div></li>
-		</ul></div></div>
-
-
-<!--<div class="sidebarboxmulti" align="center">
-              <h2>Official FB Page</h2><br>
-	<div class="content"><iframe src="//www.facebook.com/plugins/likebox.php?href=https://www.facebook.com/ISAR-Journals-737205039741272&amp;width=200&amp;height=400&amp;colorscheme=light&amp;show_faces=true&amp;header=false&amp;stream=false&amp;show_border=false" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:175px; height:230px;" allowTransparency="true"></iframe>
-</div></div>-->
 
 
 			<div class="sidebarboxmulti" align="center">
