submit tab updated

--- a/submit.html
+++ b/submit.html
@@ -418,7 +418,7 @@
 </table><br/><br/>
 
 <font face="cambria" font color="red" font size="3"><strong>Submit your paper to the respective journal mail id :</strong><br></font><br>
-<li><img src="http://www.ijretjournal.org/images/arrow.gif" align="left" style="margin:0px"><a href="http://www.internationaljournalisar.org"><font face="arial" font color="" font size="3"><strong>Click here to visit all the journals</strong><br></font><br></a></li><br><br>
+<li><img src="http://www.ijretjournal.org/images/arrow.gif" align="left" style="margin:0px"><a href="http://www.internationaljournalisar.org" target="blank"><font face="arial" font color="" font size="3"><strong>Click here to visit all the journals</strong><br></font><br></a></li><br><br>
 
 
 <font face="cambria" font color="red" font size="3"><strong><u>Publication Charges:</u></strong><br></font><br>
